--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <button id="add-control" class="add-control">
       <span class="material-symbols-outlined"> add </span>
     </button>
+
+    <div class="test-btn-block">
+      <button id="reset-btn" class="reset-btn">reset</button>
+      <button id="log-btn" class="log-btn">log state</button>
+    </div>
     <!-- root container -->
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
